# hamming-huffman

./: .bashrc  .gitignore  CMakeLists.txt  Cargo.toml  ConError.HE1  Final.txt  Intermedio.HA1  Pepe.txt  Primero.DC1  Primero.DE1  Primero.HA1  Primero.HE1  Primero.dhu  Primero.huf  Prueba.HA1  Prueba.txt  build.rs  cmake.sh  debug.sh  rebuild.sh  run.sh
src/: c_procedures.c  c_procedures.h  main.c  main.cpp  main.rs
src/bitarr/: bitarr.c  bitarr.h
src/bitvec/: CMakeLists.txt  bitvec.c  bitvec.h
src/buffered/: reader.rs  writer.rs
src/coding/: CMakeLists.txt  coder.c  coder.cpp  coder.h  decoder.c  encoder.c  masks.c
src/ext/: CMakeLists.txt  mod.rs  raw.rs
src/ext/src/: c_procedures.c  c_procedures.h  main.c
src/ext/src/bitarr/: CMakeLists.txt  bitarr.c  bitarr.h
src/ext/src/buffer/: buffer.h  buffered_reader.c  buffered_writer.c
src/ext/src/coding/: coder.h  decoder.c  encoder.c  masks.c
src/ext/src/common/: common.h
src/ext/src/hamming/: decoder.c  encoder.c  hamming.h  masks.c
src/ext/src/huffman/: CMakeLists.txt  compress.c  decompress.c  huffman.c  huffman.h
src/ext/src/noise/: CMakeLists.txt  generator.c  generator.h
src/hamming/: decoder.rs  encoder.rs  mod.rs  noise.rs
src/huffman/: compress.rs  decoder.rs  decompress.rs  encoder.rs  mod.rs
src/noise/: CMakeLists.txt  generator.c  generator.cpp  generator.h
src/util/: bitarr.rs  mod.rs  string.rs  typed_io.rs
src/util/bitarr/: mod.rs  slice_u8.rs  vec_u8.rs
ui/: iot-dashboard.slint  main.slint  menu.slint  operations.slint  principal.slint  state.slint  statistics.slint
ui/files/: compare.slint  show_file.slint  statistics.slint
ui/operations/: common.slint  compress.slint  corrupt.slint  decompress.slint  desprotect.slint  protect.slint  statistics.slint
